--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -5,12 +5,14 @@ Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
 
 :root {
-  /* change the values below to your colors from your palette */
+  /* change the values below to your colors from your palette 
+  https://coolors.co/293043-e7e7ea-f1ab33-ffffff-393d75 */
+
   --primary-color: #293043 ;
   --secondary-color: #e7e7ea ;
   --accent1-color: #f1ab33 ;
   --accent2-color: #ffffff ;
-  --accent3-color: #252746 ;
+  --accent3-color: #393d75 ;
 
 
   /* change the values below to your chosen font(s) */
@@ -20,10 +22,10 @@ Fonts are separated by a | */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #293043;  /* headlines on a white background */ 
   --headline-color-on-color: #f1ab33; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #252746; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #393d75; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #293043  ;
-  --nav-link-color: #252746;
+  --nav-link-color: #393d75;
   --nav-background-color: #e7e7ea;
   --nav-hover-link-color: #ffffff;
   --nav-hover-background-color: #293043;
@@ -95,6 +97,9 @@ p {
 .accent2{
   background-color: var(--accent2-color);
 }
+.accent3{
+  background-color: var(--accent3-color);
+}
 p.colored {
   background-color: var(--paragraph-background-color);
   color: var(--paragraph-color-on-color);
@@ -126,7 +131,7 @@ nav a:hover {
   display: grid;
   justify-content: center;
 
-  grid-template-columns: repeat(6, 15%);
+  grid-template-columns: repeat(6, 10%);
   grid-template-rows: 3em 1.5em 1.5em 3em;
   grid-template-areas: ". . home home . ."
     ". . . top . ."
