--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -52,6 +52,8 @@ footer a:hover {
 }
 
 .home-title {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 2em;
     color: #293043;
 }
 
@@ -79,4 +81,16 @@ footer a {
 
 .icon {
     width: 80px;
+}
+h1,
+h2,
+h3, 
+h4 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   
+}
+
+.home-title {
+    font-size: 2em;
+    color: #f1ab33;
 }
