--- a/wwr/week_6/positionstyles.css
+++ b/wwr/week_6/positionstyles.css
@@ -72,8 +72,7 @@
   /* This is the parent of the activity 3 boxes. */
   display: grid;
   grid-template-columns: repeat(9,1fr) ;
-
-  
+  width: 1400px;  
 }
 .red3 {
   width: 100%; 
@@ -107,7 +106,7 @@
   width: 800px;
   display: grid;
   grid-template-columns: 1fr 1fr ;
-  margin-left: 25%;
+
 }
 .red4 {
   width: 100%; 
@@ -135,8 +134,6 @@
   /* This is the parent of the activity 5 boxes. */
   height: 600px;
   width: 700px;
-  margin-left: 25%;
-  margin-right: 25%;
 
 }
 .red5 { 
@@ -150,14 +147,11 @@
   height: 200px; 
   background-color: green;
   float: left;
-  
 } 
 .yellow5 {
   width: 700px; 
   height: 275px; 
   background-color: gold; 
-
-
 } 
 .blue5 {
   width: 700px; 
@@ -171,7 +165,7 @@
   grid-template-columns: repeat(6, 1fr);
   width: 600px;
   height: 600px;
-  margin-left: 25%;
+
 }
 .red6 {
   width: 100%; 
