--- a/project/styles/site-plan.css
+++ b/project/styles/site-plan.css
@@ -9,7 +9,6 @@ Fonts are separated by a | */
 
   font-family: 'Dosis', sans-serif;
   font-family: 'Lato', sans-serif;
-  font-size: "Cambria", sans-serif;
   /* change the values below to your colors from your palette */
   
   --primary-color: #C2C5AA   ;
@@ -27,11 +26,11 @@ Fonts are separated by a | */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: 656D4A; /* paragraph text on a colored background */ 
+  --paragraph-color-on-color: #656D4A; /* paragraph text on a colored background */ 
   --paragraph-background-color: #A4AC86  ;
   --nav-link-color: #A68A64;
   --nav-background-color: #C2C5AA;
-  --nav-hover-link-color: 333D29;
+  --nav-hover-link-color: #333D29;
   --nav-hover-background-color: #A68A64;
 }
 
