fixes to home page

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,25 +22,21 @@ a {color: black;
     width: 100%;   
 }
 
-.about, .wwr, .positioning, .project1, .project2, .project_image{
+.about, .wwr1, .wwr2, .wwr_image, .positioning1, 
+.project_image, .project1, .project2, 
+.positioning_image {
     display: flex;
     align-items: center;
     text-align: center;
-    height: 100px;
+    height: 300px;
     width: 100%;
     opacity: 80%;
 }
 
-
 nav .about img {
     max-height: 250px;
-}
-
-nav .wwr img {
-    max-height: 80px;
     padding: 20px;
 }
-
 
 .about {
     background-color: lightblue;
@@ -49,37 +45,69 @@ nav .wwr img {
     height: 250px;
 }
 
-.wwr {
-    background-color:lightgreen  ;
-    grid-row: 2/3;
-;
+nav .positioning_image img {
+    height: 200px;
+    padding: 40px;
 }
 
-.positioning {
-    background-color:lightskyblue;   
+nav .wwr_image img {
+    height: 200px;
+    padding: 40px;
+}
+
+.wwr_image {
+    background-color:lightgreen  ;
+    grid-column: 1/2;
+    grid-row: 2/4;
+
+}
+
+.wwr1 {
+    background-color:lightgreen  ;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    height: 150px;
+}
+
+.wwr2 {
+    background-color:lightgreen  ;
+    grid-column: 2/3;
     grid-row: 3/4;
-    grid-column: 1/3;
+    height: 150px;
+}
+
+.positioning_image {
+    background-color:lightskyblue;   
+    grid-column: 1/2;
+    grid-row: 4/5;
+    height: 300px;
+}
+
+.positioning1 {
+    background-color:lightskyblue;   
+    grid-column: 2/3;
+    grid-row: 4/5;
+    height: 300px;
 }
 
 .project_image {
     background-color:burlywood;    
     grid-column: 1/2;
-    grid-row: 4/6;
+    grid-row: 5/7;
     height: 200px;
 }
-
 
 .project1 {
     background-color:burlywood;    
     grid-column: 2/3;
-    grid-row: 4/5;
+    grid-row: 5/6;
     height: 100px;
 }
 
 .project2 {
     background-color:burlywood;    
     grid-column: 2/3;
-    grid-row: 5/6;
+    grid-row: 6/7;
     height: 100px;
 }
 
