--- a/project/styles/site-plan.css
+++ b/project/styles/site-plan.css
@@ -194,3 +194,13 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+
+ul {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+   *display: inline;
+}
+li {
+  text-align: left;
+}
