--- a/project/styles/site-plan.css
+++ b/project/styles/site-plan.css
@@ -47,6 +47,7 @@ body {
 img {
   display: block;
   margin: 0 auto;
+  max-width: 300px;
 }
 h1, h2, h3 {
   font-family: var(--heading-font);
@@ -204,4 +205,11 @@ nav a:hover {
   border-right: 1px solid;
 }
 
-
+.images {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
