--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -6,9 +6,9 @@
   font-family: 'Dosis', sans-serif;
   font-family: 'Lato', sans-serif;
   /* change the values below to your colors from your palette */
-  
-  --primary-color: #C2C5AA   ;
-  --secondary-color: #A68A64 ;
+
+  --primary-color: #C2C5AA;
+  --secondary-color: #A68A64;
   --accent1-color: #A4AC86;
   --accent2-color: #656D4A;
   --accent3-color: #7F4F24;
@@ -19,11 +19,15 @@
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #333642;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #565758; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #656D4A; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #A4AC86  ;
+  --headline-color-on-white: #333642;
+  /* headlines on a white background */
+  --headline-color-on-color: white;
+  /* headlines on a colored background */
+  --paragraph-color-on-white: #565758;
+  /* paragraph text on a white background */
+  --paragraph-color-on-color: #656D4A;
+  /* paragraph text on a colored background */
+  --paragraph-background-color: #A4AC86;
   --nav-link-color: #A68A64;
   --nav-background-color: #C2C5AA;
   --nav-hover-link-color: #333D29;
@@ -32,110 +36,248 @@
 
 
 body {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 4em;
-    font-size: 18px;
-    text-align: left;
-  }
-  img {
-    display: block;
-    margin: 0 auto;
-  }
-  h1, h2, h3 {
-    font-family: var(--heading-font);
-    letter-spacing: 3px;
-    color: var(--headline-color-on-white);
-    text-align: center;
-  }
-  
-    h4, h5, h6 {
-      font-family: var(--heading-font);
-      letter-spacing: 2px;
-      color: var(--headline-color-on-white);
-      text-align: center;
-  
-  }
-  h2 {
-    text-align: center;
-  }
-  hr {
-    height: 3px;
-    margin: 35px 0;
-    background: var(--accent1-color);
-  }
-  header {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1em;
+  font-size: 18px;
+  text-align: left;
+}
 
-    text-align: center;
-    color: var(--paragraph-color-on-color);
-    background-color: var(--paragraph-background-color);
+img {
+  margin: 0 auto;
+}
 
-  }
+h1,
+h2,
+h3 {
+  font-family: var(--heading-font);
+  letter-spacing: 3px;
+  color: var(--headline-color-on-white);
+  text-align: center;
+}
 
-  header > h1, header > h2 {
-    color: var(--headline-color-on-color);
-  }
-  
-  p {
-    font-family: var(--paragraph-font);
-    color: var(--paragraph-color);
-    letter-spacing: 0.4px;
-    text-align: left;
-  }
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font);
+  letter-spacing: 2px;
+  color: var(--headline-color-on-white);
+  text-align: center;
+
+}
+
+h2 {
+  text-align: center;
+}
+
+hr {
+  height: 3px;
+  margin: 35px 0;
+  background: var(--accent1-color);
+}
+
+header {
+
+  text-align: center;
+  color: var(--paragraph-color-on-color);
+  background-color: var(--paragraph-background-color);
+
+}
+
+header>h1,
+header>h2 {
+  color: var(--headline-color-on-color);
+}
+
+p {
+  font-family: var(--paragraph-font);
+  color: var(--paragraph-color);
+  letter-spacing: 0.4px;
+  text-align: left;
+}
 
 #banner {
-    height: 250px;
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    grid-template-rows:  3fr 1fr;
+  height: 225px;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  grid-template-rows: 3fr 1fr;
 
 }
+
 #logo {
-    grid-row: 1/2;
-    grid-column: 1/2;
-    width: 250px;
-    padding-top: 50px;
-    align-self: center;
+  grid-row: 1/2;
+  grid-column: 1/2;
+  width: 225px;
+  padding-top: 50px;
+  align-self: center;
 }
+
 #header_background {
-    box-sizing:border-box;
-    height: 250px;
-    grid-row: 1/3;
-    grid-column: 2/3;
-    opacity: 85%;
+  box-sizing: border-box;
+  height: 225px;
+  grid-row: 1/3;
+  grid-column: 2/3;
+  opacity: 85%;
 }
 
 #tagline {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    text-align: center;
-    z-index: 1;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  text-align: center;
+  z-index: 1;
+}
+
+nav,
+#square_purchase {
+  background-color: var(--nav-background-color);
+  line-height: 1.5em;
+  text-align: center;
+  font-size: 1.2em;
 }
 
 nav {
-    background-color: var(--nav-background-color);
-    line-height: 3em;
-    text-align: center;
-    font-size: 1.2em;
+  list-style-type: none;
+  display: flex;
+
+}
+
+nav a {
+  padding: 1em;
+  width: 25%;
+  min-width: 120px;
+  text-decoration: none;
+  padding: 10px;
+
+}
+
+nav a:link,
+nav a:visited,
+#square_purchase:link,
+#square_purchase:visited {
+  color: var(--nav-link-color);
+}
+
+nav a:hover
+ {
+  color: var(--nav-hover-link-color);
+  background-color: var(--nav-hover-background-color);
+}
+
+#square_purchase:hover {
+  color: var(--nav-hover-link-color);
+  background-color: var(--nav-hover-background-color);
+
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 1fr 2fr 3fr 3fr;
+
+}
+
+#news {
+  width: 475px;
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+
+#products {
+  display: block;
+  padding: 0px;
+  grid-column: 3/4;
+  grid-row: 1/2;
+
+
+}
+
+#products button {
+  width: 250px;
+  height: 35px;
+  margin: 10px;
+  margin-top: 10px;
+  margin-left: 40px;
+  padding: 10px;
+}
+
+#product_image_div {
+  grid-column: 4/5;
+  grid-row: 1/2;
+  margin-top: 25px;
+}
+
+#product_image {
+  width: 400px;
+}
+
+#video {
+  grid-column: 1/5;
+  grid-row: 3/4;
+  width: 700px;
+}
+
+#video iframe {
+  margin-left: 20px;
+}
+
+
+#video h2 {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  text-align: left;
+  align-items: ce;
+  margin-left: 0px;
+}
+
+#product_text,
+#product_text_div {
+  grid-column: 4/5;
+  grid-row: 3/4;
+  text-align: left;
+  text-justify: auto;
+}
+
+#product_text_div {
+  grid-column: 4/5;
+  grid-row: 3/4;
+  text-align: center;
+  text-justify: auto;
+}
+
+#square_purchase {
+  padding: 1em;
+  text-decoration: none;
+  text-align: center;
+  align-self: center;
+  background-color: (--nav-background-color);
+}
+
+#square_link {
+  align-content: center;
+  text-align: center;
+  margin: 35px;
+}
+
+footer {
+  background-color:#A4AC86;
+  margin-top:80px;
+  padding:25px 50px;
+  opacity: 70%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+footer a {
+  color:#565758 ;
+  ;
   }
-  nav  {
-    list-style-type: none;
-    display: flex;
-  
-  }
-  nav a {
-    padding:1em;
-    width: 25%;
-    min-width: 120px;
-    text-decoration: none;
-    padding: 10px;
-  
-  }
-  nav a:link, nav a:visited {
-    color: var(--nav-link-color);
-  }
-  nav a:hover {
-    color: var(--nav-hover-link-color);
-    background-color: var(--nav-hover-background-color);
-  }
+
+.social a:hover {
+    background-color: #e7e7ea;
+}
+footer .social img {
+    padding-top:15px;
+    }
+
   
