--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -77,7 +77,6 @@ hr {
 }
 
 header {
-
   text-align: center;
   color: var(--paragraph-color-on-color);
   background-color: var(--paragraph-background-color);
@@ -99,7 +98,7 @@ p {
 #banner {
   height: 225px;
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 350px 1fr;
   grid-template-rows: 3fr 1fr;
 
 }
@@ -108,6 +107,7 @@ p {
   grid-row: 1/2;
   grid-column: 1/2;
   width: 225px;
+
   padding-top: 50px;
   align-self: center;
 }
@@ -211,12 +211,13 @@ nav a:hover
 
 #video {
   grid-column: 1/5;
-  grid-row: 3/4;
+  grid-row: 3/6;
   width: 700px;
 }
 
 #video iframe {
-  margin-left: 20px;
+  margin-top: 30px;
+
 }
 
 
@@ -234,14 +235,9 @@ nav a:hover
   grid-row: 3/4;
   text-align: left;
   text-justify: auto;
+  height: 300px;
 }
 
-#product_text_div {
-  grid-column: 4/5;
-  grid-row: 3/4;
-  text-align: center;
-  text-justify: auto;
-}
 
 #square_purchase {
   padding: 1em;
@@ -257,9 +253,21 @@ nav a:hover
   margin: 35px;
 }
 
+#colors {
+  grid-column: 4/5;
+  grid-row: 4/6;
+
+}
+
+#colors img {
+  height: 250px;
+  margin-left: 80px;
+
+}
+
 footer {
   background-color:#A4AC86;
-  margin-top:80px;
+  margin-top: 50px;
   padding:25px 50px;
   opacity: 70%;
   display: flex;
@@ -279,5 +287,6 @@ footer a {
 footer .social img {
     padding-top:15px;
     }
+
 
   
