--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -288,5 +288,59 @@ footer .social img {
     padding-top:15px;
     }
 
+#main_contact {
+  display: grid;
+  grid-template-columns: 20% 10% 30% 40%;
+}
 
+#contact_icon {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  width: 100%;
+}
+
+#column_1 {
+  grid-row: 1/6;
+  grid-column: 1/2;
+}
+#column_1 h2, #column_1 p, #column_1 a {
+  grid-column: 1/2;
+  grid-row: 3/6;
+}
+
+#divider_bar {
+  background-color:#C2C5AA;
+  margin: 15px;
+  grid-column: 2/3;
+  grid-row: 1/6;
+}
+#about_duodocks {
+  grid-column: 3/5;
+  grid-row: 1/2;
+}
+
+column_3 {
+  grid-column: 3/4;
+  grid-row: 1/6;
   
+}
+#column_3 h2:nth-of-type(1), #column_3 p:nth-of-type(1) {
+  grid-column: 3/4;
+  grid-row: 2/4;
+  margin: 20px;
+}
+
+#rylan {
+  grid-column: 4/5;
+  grid-row: 2/4;
+  width: 100%;
+}
+#column_3 h2:nth-of-type(2), #column_3 p:nth-of-type(2) {
+  grid-column: 3/4;
+  margin: 20px;
+}
+#adam {
+  grid-column: 4/5;
+  grid-row: 4/6;
+  width: 100%;
+}
