--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -293,11 +293,23 @@ footer .social img {
   grid-template-columns: 20% 10% 30% 40%;
 }
 
-#contact_icon {
+#main_faq {  
+  display: grid;
+  grid-template-columns: 20% 10% 30% 40%;
+}
+
+#main_reviews {  
+  display: grid;
+  grid-template-columns: 20% 10% 30% 40%;
+}
+
+
+#contact_icon, #review_icon, #questions_icon {
   grid-column: 1/2;
   grid-row: 1/3;
   width: 100%;
 }
+
 
 #column_1 {
   grid-row: 1/6;
@@ -306,6 +318,7 @@ footer .social img {
 #column_1 h2, #column_1 p, #column_1 a {
   grid-column: 1/2;
   grid-row: 3/6;
+  margin: 10px;
 }
 
 #divider_bar {
@@ -314,33 +327,125 @@ footer .social img {
   grid-column: 2/3;
   grid-row: 1/6;
 }
+
+#divider_bar_faq {
+  background-color:#C2C5AA;
+  margin: 15px;
+  grid-column: 2/3;
+  grid-row: 1/7;
+}
+
 #about_duodocks {
   grid-column: 3/5;
   grid-row: 1/2;
 }
 
-column_3 {
-  grid-column: 3/4;
-  grid-row: 1/6;
   
-}
-#column_3 h2:nth-of-type(1), #column_3 p:nth-of-type(1) {
+.rylan {
   grid-column: 3/4;
   grid-row: 2/4;
   margin: 20px;
 }
-
 #rylan {
   grid-column: 4/5;
   grid-row: 2/4;
-  width: 100%;
+  width: 95%;
+  margin: 10px;
 }
-#column_3 h2:nth-of-type(2), #column_3 p:nth-of-type(2) {
+
+
+.adam {
   grid-column: 3/4;
+  grid-row: 4/6;
   margin: 20px;
 }
 #adam {
   grid-column: 4/5;
   grid-row: 4/6;
-  width: 100%;
+  width: 95%;
+  margin: 10px;
+}
+
+#social_media_header {
+  grid-column: 3/4;
+  grid-row: 4/5;
+}
+
+#social_media_icon {
+  grid-column: 3/4;
+  grid-row: 4/5;
+  width: 90%;
+}
+
+#review_1_text {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  margin: 10px;
+}
+
+#review_2_text {
+  grid-column: 3/4;
+  grid-row: 3/4;
+  margin: 10px;
+}
+
+#scary_review_1 {
+  grid-column: 4/5;
+  grid-row: 2/3; 
+  width: 90%;
+  margin: 20px;
+}
+
+#scary_review_2 {
+  grid-column: 4/5;
+  grid-row: 3/4; 
+  width: 90%;
+  margin: 20px;
+}
+
+#social_media_links {
+  display: flex;
+  flex-direction: column;
+  grid-column: 4/5;
+  grid-row: 4/5;
+}
+
+#social_media_links a {
+  text-align: center;
+  padding-top: 70px;
+  height: 50px;
+  font-size: x-large;
+}
+
+.question {
+  grid-column: 3/4;
+  margin: 20px;
+}
+
+.answer {
+  grid-column: 4/5;
+}
+
+p.question:nth-of-type(1), p.answer:nth-of-type(7) { 
+  grid-row: 1/2;
+}
+
+p.question:nth-of-type(2), p.answer:nth-of-type(8) { 
+  grid-row: 2/3;
+}
+
+p.question:nth-of-type(3), p.answer:nth-of-type(9) { 
+  grid-row: 3/4;
+}
+
+p.question:nth-of-type(4), p.answer:nth-of-type(10) { 
+  grid-row: 4/5;
+}
+
+p.question:nth-of-type(5), p.answer:nth-of-type(11) { 
+  grid-row: 5/6;
+}
+
+p.question:nth-of-type(6), p.answer:nth-of-type(12) { 
+  grid-row: 6/7;
 }
