--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -225,7 +225,6 @@ nav a:hover
   grid-column: 1/2;
   grid-row: 3/4;
   text-align: left;
-  align-items: ce;
   margin-left: 0px;
 }
 
@@ -244,7 +243,7 @@ nav a:hover
   text-decoration: none;
   text-align: center;
   align-self: center;
-  background-color: (--nav-background-color);
+  background-color: var(--nav-background-color);
 }
 
 #square_link {
